# limnc-flaked

./: .gitignore  404.html  Makefile  README.md  index.html  mkdocs.yml  pyproject.toml
.github/workflows/: deploy-docs.yml  python-package.yml
api/: index.html
config/: index.html
docs/: api.md  config.md  guide.md  index.md  installation.md
flaked/: cli.py  main.py
flaked/models/: domain.py  query.py
flaked/services/: config.py  job.py  log.py  scheduler.py  upload.py
flaked/views/: config.py  logs.py  scheduler.py
guide/: index.html
installation/: index.html
limnc_flaked/: cli.py  main.py
limnc_flaked/models/: domain.py
limnc_flaked/services/: config.py  job.py  scheduler.py  upload.py
limnc_flaked/views/: config.py  scheduler.py
search/: search_index.json
tests/: test_config.py
tests/data/: config.yml
